--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .vscode/tasks.json
 project_vending_machine/.vscode/tasks.json
 project_vending_machine/main.exe
+project_vending_machine/.vscode/settings.json
